--- a/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
+++ b/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
@@ -5,11 +5,11 @@
 		closable="true" position="center">
 		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
 			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()"
-				action="#{harrastajaAdmin.piilotaVyökoe}" actionListener="#{harrastajaAdmin.poistaVyökoe}" />
-			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" />
+				action="#{harrastajaAdmin.piilotaVyökoe}" actionListener="#{harrastajaAdmin.poistaVyökoe}" immediate="true"/>
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" immediate="true"/>
 		</h:panelGrid>
 	</ace:confirmationDialog>
-	<h:panelGrid colums="3">
+	<h:panelGrid columns="3">
 		<h:commandButton action="#{harrastajaAdmin.lisääVyökoe}" styleClass="ikoni" image="/kuvat/lisää.png" immediate="true">
 			<ace:ajax render="@form" />
 		</h:commandButton>
