--- a/src/main/webapp/admin/harrastajat/perustiedot.xhtml
+++ b/src/main/webapp/admin/harrastajat/perustiedot.xhtml
@@ -5,8 +5,8 @@
 		height="200" closable="true" position="center">
 		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
 			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaHarrastajanPoisto').hide()"
-				action="#{harrastajaAdmin.piilotaHarrastaja}" actionListener="#{harrastajaAdmin.poistaHarrastaja}" />
-			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaHarrastajanPoisto').hide()" />
+				action="#{harrastajaAdmin.piilotaHarrastaja}" actionListener="#{harrastajaAdmin.poistaHarrastaja}" immediate="true"/>
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaHarrastajanPoisto').hide()" immediate="true"/>
 		</h:panelGrid>
 	</ace:confirmationDialog>
 	<h:panelGrid columns="3" columnClasses="tabletop, tabletop, tabletop">
