--- a/src/main/webapp/admin/harrastajat/roolit.xhtml
+++ b/src/main/webapp/admin/harrastajat/roolit.xhtml
@@ -1,14 +1,16 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<ace:listControl style="width:500px">
-		<ace:list value="#{roolit}" var="_rooli_a" selectionMode="multiple">
-			<h:outputText value="#{_rooli_a.nimi}" />
-		</ace:list>
-		<ace:list value="#{harrastaja.roolit}" var="_rooli_b" selectionMode="multiple">
-			<h:outputText value="#{_rooli_b.nimi}" />
-		</ace:list>
-	</ace:listControl>
-	<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{harrastajaAdmin.tallennaHarrastaja}" />
+	<h:panelGrid>
+		<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{harrastajaAdmin.tallennaHarrastaja}" />
+		<ace:listControl style="width:500px">
+			<ace:list value="#{roolit}" var="_rooli_a" selectionMode="multiple">
+				<h:outputText value="#{_rooli_a.nimi}" />
+			</ace:list>
+			<ace:list value="#{harrastaja.roolit}" var="_rooli_b" selectionMode="multiple">
+				<h:outputText value="#{_rooli_b.nimi}" />
+			</ace:list>
+		</ace:listControl>
+	</h:panelGrid>
 
 </ui:composition>
