--- a/src/main/webapp/käyttäjä/vyökokeet.xhtml
+++ b/src/main/webapp/käyttäjä/vyökokeet.xhtml
@@ -11,8 +11,8 @@
 			height="200" closable="true" position="center">
 			<h:panelGrid columns="2" styleClass="centeredPanelGrid">
 				<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()"
-					action="#{käyttäjäylläpito.piilotaVyökoe}" actionListener="#{käyttäjäylläpito.poistaVyökoe}" />
-				<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" />
+					action="#{käyttäjäylläpito.piilotaVyökoe}" actionListener="#{käyttäjäylläpito.poistaVyökoe}" immediate="true"/>
+				<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" immediate="true"/>
 			</h:panelGrid>
 		</ace:confirmationDialog>
 		<h:commandButton action="#{käyttäjäylläpito.lisääVyökoe}"  rendered="#{!itse.alaikäinen}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
