--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -16,6 +16,12 @@
 	margin-left: 15px;
 }
 
+.pieniikoni {
+	height: 20px;
+	width: 20px;
+	margin-left: 5px;
+}
+
 .isoikoni {
 	height: 80px;
 	width: 80px;
