--- a/src/main/webapp/admin/laskutus/laskut.xhtml
+++ b/src/main/webapp/admin/laskutus/laskut.xhtml
@@ -5,16 +5,20 @@
 		closable="true" position="center">
 		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
 			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaLaskunPoisto').hide()"
-				action="#{laskutusAdmin.piilotaLasku}" actionListener="#{laskutusAdmin.poistaLasku}" immediate="true"/>
-			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaLaskunPoisto').hide()" immediate="true"/>
+				action="#{laskutusAdmin.piilotaLasku}" actionListener="#{laskutusAdmin.poistaLasku}" immediate="true" />
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaLaskunPoisto').hide()" immediate="true" />
 		</h:panelGrid>
 	</ace:confirmationDialog>
-	<h:outputLink value="../API/laskut/zippaaLaskuttamattomat" target="_blank">
-		<h:graphicImage value="/kuvat/zip.jpg" styleClass="ikoni" />
-	</h:outputLink>
-	<h:commandLink action="#{laskutusAdmin.lähetäLaskut}">
-		<h:graphicImage value="/kuvat/lähetä.jpg" styleClass="ikoni" />
-	</h:commandLink>
+	<h:panelGrid columns="4">
+		<h:commandButton rendered="#{lasku != null}" styleClass="ikoni"
+			onclick="ice.ace.instance('form:vahvistaLaskunPoisto').show();" image="/kuvat/poista.png" immediate="true" />
+		<h:outputLink value="../API/laskut/zippaaLaskuttamattomat" target="_blank">
+			<h:graphicImage value="/kuvat/zip.jpg" styleClass="ikoni" />
+		</h:outputLink>
+		<h:commandLink action="#{laskutusAdmin.lähetäLaskut}">
+			<h:graphicImage value="/kuvat/lähetä.jpg" styleClass="ikoni" />
+		</h:commandLink>
+	</h:panelGrid>
 	<ace:dataTable value="#{laskut}" var="_lasku" selectionMode="single" stateMap="#{laskutusAdmin.laskuRSM}" rows="10"
 		paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false"
 		rowSelectListener="#{laskutusAdmin.laskuValittu}">
@@ -153,16 +157,13 @@
 			<ace:rowEditor />
 		</ace:column>
 		<ace:column>
-			<h:commandButton value="-" action="#{laskutusAdmin.poistaRivi(_laskurivi)}" immediate="true">
+			<h:commandButton image="/kuvat/poista.png" action="#{laskutusAdmin.poistaRivi(_laskurivi)}" immediate="true" styleClass="pieniikoni">
+				<f:ajax render="@form" />
+			</h:commandButton>
+			<h:commandButton image="/kuvat/lisää.png" action="#{laskutusAdmin.lisääRivi()}" immediate="true" styleClass="pieniikoni">
 				<f:ajax render="@form" />
 			</h:commandButton>
 		</ace:column>
 	</ace:dataTable>
-	<h:commandButton rendered="#{lasku != null}" styleClass="ikoni"
-		onclick="ice.ace.instance('form:vahvistaLaskunPoisto').show();" image="/kuvat/poista.png" immediate="true" />
-	<h:commandButton value="+" action="#{laskutusAdmin.lisääRivi}" immediate="true" />
-	<h:commandButton rendered="#{lasku != null}" value="S" styleClass="ikoni" action="#{laskutusAdmin.tallennaLasku}">
-		<f:ajax execute="@form" render="@form" />
-	</h:commandButton>
 
 </ui:composition>
