--- a/src/main/webapp/admin/laskutus/laskuttamattomat.xhtml
+++ b/src/main/webapp/admin/laskutus/laskuttamattomat.xhtml
@@ -20,8 +20,11 @@
 				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET"/>
 			</h:outputText>
 		</ace:column>
-		<ace:column headerText="Treenikertoja" styleClass="lefttext">
-			<h:outputText value="#{_sopimus.treenikertoja}" />
+		<ace:column headerText="Treenikrt til." styleClass="lefttext">
+			<h:outputText value="#{_sopimus.treenikertojaTilattu}" />
+		</ace:column>
+		<ace:column headerText="Treenikrt jäl." styleClass="lefttext">
+			<h:outputText value="#{_sopimus.treenikertojaJäljellä}" />
 		</ace:column>
 		<ace:column headerText="Viime lask." styleClass="lefttext">
 			<h:outputText value="#{_sopimus.viimeksiLaskutettu}" >
