--- a/src/main/webapp/kirjautuminen.xhtml
+++ b/src/main/webapp/kirjautuminen.xhtml
@@ -48,17 +48,17 @@
 					<h:outputText value="Vanha salasana" />
 					<h:panelGrid>
 						<ace:message for="vaihtosalasana" />
-						<h:inputText value="#{salasananvaihto.tunnusvaihto.salasana}" id="vaihtosalasana" />
+						<h:inputSecret value="#{salasananvaihto.tunnusvaihto.salasana}" id="vaihtosalasana" />
 					</h:panelGrid>
 					<h:outputText value="Uusi salasana" />
 					<h:panelGrid>
 						<ace:message for="vaihtouusisalasana" />
-						<h:inputText value="#{salasananvaihto.tunnusvaihto.uusiSalasana}" id="vaihtouusisalasana" />
+						<h:inputSecret value="#{salasananvaihto.tunnusvaihto.uusiSalasana}" id="vaihtouusisalasana" />
 					</h:panelGrid>
 					<h:outputText value="Toistettu salasana" />
 					<h:panelGrid>
 						<ace:message for="vaihtotoistettusalasana" />
-						<h:inputText value="#{salasananvaihto.tunnusvaihto.toistettuSalasana}" id="vaihtotoistettusalasana" />
+						<h:inputSecret value="#{salasananvaihto.tunnusvaihto.toistettuSalasana}" id="vaihtotoistettusalasana" />
 					</h:panelGrid>
 				</h:panelGrid>
 				<h:panelGrid columns="2">
