--- a/src/main/webapp/admin/laskutus/laskutus.xhtml
+++ b/src/main/webapp/admin/laskutus/laskutus.xhtml
@@ -8,5 +8,8 @@
 		<ace:tabPane label="Laskuttamattomat">
 			<ui:include src="laskuttamattomat.xhtml" />
 		</ace:tabPane>
+		<ace:tabPane label="Kuittaus">
+			<ui:include src="kuittaus.xhtml" />
+		</ace:tabPane>
 	</ace:tabSet>
 </ui:composition>
