--- a/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
+++ b/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
@@ -29,28 +29,28 @@
 				<ace:column headerText="Nimi" styleClass="lefttext">
 					<h:outputText value="#{_sopimustyyppi.nimi}" />
 				</ace:column>
-				<ace:column headerText="Jäsen">
+				<ace:column headerText="Jäs">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.jäsenmaksu}" />
 				</ace:column>
-				<ace:column headerText="Harj.maksu">
+				<ace:column headerText="Harj">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.harjoittelumaksu}" />
 				</ace:column>
-				<ace:column headerText="Kertoja">
+				<ace:column headerText="Krt">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.treenikertoja}" />
 				</ace:column>
-				<ace:column headerText="Alkeis">
+				<ace:column headerText="Alk">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.alkeiskurssi}" />
 				</ace:column>
 				<ace:column headerText="Koe">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.koeaika}" />
 				</ace:column>
-				<ace:column headerText="Vap.">
+				<ace:column headerText="Va.">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.vapautus}" />
 				</ace:column>
-				<ace:column headerText="Power">
+				<ace:column headerText="Pwr">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.power}" />
 				</ace:column>
-				<ace:column headerText="Opisk.">
+				<ace:column headerText="Opi">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.opiskelija}" />
 				</ace:column>
 				<ace:column headerText="VK">
@@ -62,16 +62,16 @@
 				<ace:column headerText="Kertoja">
 					<h:outputText value="#{_sopimustyyppi.oletusTreenikerrat}" />
 				</ace:column>
-				<ace:column headerText="Maksuväli">
+				<ace:column headerText="Laskv.">
 					<h:outputText value="#{_sopimustyyppi.oletusMaksuväli}" />
 				</ace:column>
 				<ace:column headerText="Laskut.">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.laskutettava}" />
 				</ace:column>
-				<ace:column headerText="Min. ikä">
+				<ace:column headerText="Min.ikä">
 					<h:outputText value="#{_sopimustyyppi.alaikäraja}" />
 				</ace:column>
-				<ace:column headerText="Max. ikä">
+				<ace:column headerText="Max.ikä">
 					<h:outputText value="#{_sopimustyyppi.yläikäraja}" />
 				</ace:column>
 				<ace:column headerText="Hinta">
