--- a/src/main/webapp/admin/perustiedot/perustiedot.xhtml
+++ b/src/main/webapp/admin/perustiedot/perustiedot.xhtml
@@ -19,5 +19,8 @@
 		<ace:tabPane label="Roolit">
 			<ui:include src="roolit.xhtml" />
 		</ace:tabPane>
+		<ace:tabPane label="Asetukset">
+			<ui:include src="asetukset.xhtml" />
+		</ace:tabPane>
 	</ace:tabSet>
 </ui:composition>
