--- a/src/main/webapp/admin/perustiedot/asetukset.xhtml
+++ b/src/main/webapp/admin/perustiedot/asetukset.xhtml
@@ -93,5 +93,5 @@
 			<h:inputText value="#{asetukset.yläotsikko}" size="30" id="ypyläotsikko" />
 		</h:panelGrid>
 	</h:panelGrid>
-	<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{perustietoAdmin.tallennaAsetukset}" />
+	<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{asetuslataaja.tallennaAsetukset()}" />
 </ui:composition>
