--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -71,6 +71,9 @@
 				<ace:tabPane label="Laskutus">
 					<ui:include src="laskutus/laskutus.xhtml" />
 				</ace:tabPane>
+				<ace:tabPane label="Vyökokeet">
+					<ui:include src="vyökokeet/vyökokeet.xhtml" />
+				</ace:tabPane>
 				<ace:tabPane label="Perustiedot">
 					<ui:include src="perustiedot/perustiedot.xhtml" />
 				</ace:tabPane>
